<resources>
    <string name="app_name">Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="ranking" translatable="false">Ranking</string>
    <string name="difficult">Difficult</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="random">Random</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="string" translatable="false">%1$s</string>
    <string name="category">Category</string>
    <string name="integer" translatable="false">%1$.0f</string>
    <string name="score">Score</string>
    <string name="resume_games">Resume</string>
    <string name="game">Game</string>
    <string name="name">Name</string>
    <string name="invalid_user">User doesn\'t exist!!</string>
    <string name="fields_error">Please complete all fields!!</string>
    <string name="password_error">Passwords doesn\'t match!!</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="continue_question">Want another one ?</string>
    <string name="open_question">You have a open Question, would you like to start another game ?</string>
    <string name="conectivity_error">No internet, please connect to play!</string>
    <string name="logout">Logout</string>
</resources>